kubernetes/apps/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8686
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          hostPath:
            path: /mnt/8000SAM1/8000/docker/downloaders/lidarr/config
            type: Directory
        - name: data
          hostPath:
            path: /mnt/8000SAM1/8000
            type: Directory
